docs: Update Swagger documentation
